Make notes on desired deprecation

--- a/extensions/amp-accordion/0.1/amp-accordion.css
+++ b/extensions/amp-accordion/0.1/amp-accordion.css
@@ -20,7 +20,9 @@
   margin: 0;
 }
 
-/* heading */
+/* heading
+ * TODO(dvoytenko): remove most of these styles, except maybe for `cursor`.
+ */
 .i-amphtml-accordion-header {
   cursor: pointer;
   background-color: #efefef;
