Initial code for amp-carousel 0.2.
- Uses amp-base-carousel's implementation, with the amp-carousel API /
styling.

--- a/extensions/amp-base-carousel/0.1/carousel.css
+++ b/extensions/amp-base-carousel/0.1/carousel.css
@@ -50,7 +50,7 @@
  * the scrollbars for all browsers.
  * TODO(sparhami) Find a solution for the clipping on all browsers.
  */
-.i-amphtml-carousel-scroll::-webkit-scrollbar {
+.i-amphtml-carousel-scroll[hide-scrollbar="true"]::-webkit-scrollbar {
   display: none;
 }
 
