--- a/extensions/amp-story/1.0/amp-story-system-layer.css
+++ b/extensions/amp-story/1.0/amp-story-system-layer.css
@@ -156,19 +156,27 @@
   left: 48px !important;
 }
 
-[i-amphtml-story-messagedisplay="noshow"] .i-amphtml-message-container,
-[i-amphtml-story-has-new-page="noshow"] .i-amphtml-story-has-new-page-text {
+[i-amphtml-story-messagedisplay="noshow"] .i-amphtml-message-container {
   transition: opacity 0.2s cubic-bezier(0.4, 0.0, 1, 1), transform 0.0s 0.2s !important;
   transform: translateX(10px) !important;
   opacity: 0 !important;
+}
+
+[i-amphtml-story-has-new-page="noshow"] .i-amphtml-story-has-new-page-notification-container {
+  transition: opacity 1.5s !important;
+  opacity: 0 !important;
+}
+
+.last-page-active[i-amphtml-story-has-new-page="show"] .i-amphtml-story-has-new-page-notification-container {
+  transition: opacity 1.5s !important;
+  opacity: 1 !important;
 }
 
 [dir=rtl][i-amphtml-story-messagedisplay="noshow"] .i-amphtml-message-container {
   transform: translateX(-10px) !important;
 }
 
-[i-amphtml-story-messagedisplay="show"] .i-amphtml-message-container,
-.last-page-active[i-amphtml-story-has-new-page="show"] .i-amphtml-story-has-new-page-text {
+[i-amphtml-story-messagedisplay="show"] .i-amphtml-message-container {
   transition: opacity 0.2s cubic-bezier(0.0, 0.0, 0.2, 1), transform 0.2s cubic-bezier(0.4, 0.0, 0.2, 1) !important;
   opacity: 1 !important;
   transform: translateX(0px) !important;
@@ -244,13 +252,45 @@
   display: none !important;
 }
 
-.i-amphtml-story-has-new-page-text {
+.i-amphtml-story-has-new-page-notification-container {
   display: flex !important;
+  position: absolute !important;
+  justify-content: center !important;
+  z-index: 100002 !important; /* On top of the progress bar. */
+  top: 32px !important;
+  right: 0 !important;
+  left: 0 !important;
+  opacity: 0 !important;
+}
+
+.i-amphtml-story-has-new-page-text-wrapper {
+  background-color: rgba(32, 33, 37, 0.8) !important;
+  display: flex !important;
+  justify-content: center !important;
   align-items: center !important;
+  padding: 4px 8px !important;
+  border-radius: 5% !important;
+}
+
+.i-amphtml-story-has-new-page-text {
   color: #fff !important;
   font-size: 16px !important;
   text-shadow: 0px 0px 6px rgba(0, 0, 0, 0.36) !important;
-  opacity: 0 !important;
+  font-weight: 700 !important;
+}
+
+.i-amphtml-story-has-new-page-circle-icon {
+	background: rgba(3, 255, 160, 1) !important;
+	border-radius: 50% !important;
+	height: 6px !important;
+	width: 6px !important;
+  position: relative !important;
+  box-shadow: 0 0 0 4px rgba(3, 255, 160, 0.80) !important;
+  margin: 0px 10px !important;
+}
+
+.i-amphtml-story-desktop-panels .i-amphtml-story-has-new-page-notification-container {
+  top: 0 !important;
 }
 
 .i-amphtml-embedded.first-page-active .i-amphtml-story-info-control {
