--- a/extensions/amp-story/1.0/amp-story-system-layer.css
+++ b/extensions/amp-story/1.0/amp-story-system-layer.css
@@ -268,7 +268,9 @@
   display: flex !important;
   justify-content: center !important;
   align-items: center !important;
-  padding: 4px 8px !important;
+  padding-top: 4px !important;
+  padding-bottom: 4px !important;
+  padding-right: 4px !important;
   border-radius: 5px !important;
 }
 
@@ -286,7 +288,7 @@
 	height: 6px !important;
 	width: 6px !important;
   position: relative !important;
-  box-shadow: 0 0 0 2px rgba(3, 255, 160, 0.80) !important;
+  box-shadow: 0 0 0 2px rgba(3, 255, 160, 0.5) !important;
   margin: 0px 10px !important;
 }
 
