--- a/extensions/amp-story/1.0/amp-story-system-layer.css
+++ b/extensions/amp-story/1.0/amp-story-system-layer.css
@@ -126,12 +126,12 @@
   transform-origin: right !important;
 }
 
-.first-page-active[info] .i-amphtml-message-container {
+.i-amphtml-first-page-active[info] .i-amphtml-message-container {
   /* 48px for info button, add width to padding for additional story buttons. */
   padding-right: 48px !important;
 }
 
-.first-page-active[info][dir=rtl] .i-amphtml-message-container {
+.i-amphtml-first-page-active[info][dir=rtl] .i-amphtml-message-container {
   /* 48px for info button, add width to padding for additional story buttons. */
   padding-right: auto !important;
   padding-left: 48px !important;
@@ -167,7 +167,7 @@
   opacity: 0 !important;
 }
 
-.last-page-active[i-amphtml-story-has-new-page="show"] .i-amphtml-story-has-new-page-notification-container {
+.i-amphtml-last-page-active[i-amphtml-story-has-new-page="show"] .i-amphtml-story-has-new-page-notification-container {
   transition: opacity 1.5s !important;
   opacity: 1 !important;
 }
@@ -270,8 +270,14 @@
   align-items: center !important;
   padding-top: 4px !important;
   padding-bottom: 4px !important;
-  padding-right: 4px !important;
+  padding-right: 10px !important;
   border-radius: 5px !important;
+}
+
+
+[dir=rtl] .i-amphtml-story-has-new-page-text-wrapper {
+  padding-right: 0 !important;
+  padding-left: 10px !important;
 }
 
 .i-amphtml-story-has-new-page-text {
@@ -279,14 +285,13 @@
   font-size: 16px !important;
   text-shadow: 0px 0px 6px rgba(0, 0, 0, 0.36) !important;
   font-weight: 700 !important;
-  margin-right: 8px !important;
 }
 
 .i-amphtml-story-has-new-page-circle-icon {
-	background: rgba(3, 255, 160, 1) !important;
-	border-radius: 50% !important;
-	height: 6px !important;
-	width: 6px !important;
+  background: rgba(3, 255, 160, 1) !important;
+  border-radius: 50% !important;
+  height: 6px !important;
+  width: 6px !important;
   position: relative !important;
   box-shadow: 0 0 0 2px rgba(3, 255, 160, 0.5) !important;
   margin: 0px 10px !important;
@@ -296,7 +301,7 @@
   top: 0 !important;
 }
 
-.i-amphtml-embedded.first-page-active .i-amphtml-story-info-control {
+.i-amphtml-embedded.i-amphtml-first-page-active .i-amphtml-story-info-control {
   display: block !important;
 }
 
