--- a/extensions/amp-story/1.0/amp-story-bling-link.css
+++ b/extensions/amp-story/1.0/amp-story-bling-link.css
@@ -25,8 +25,8 @@
   border-radius: 50% !important;
   background: rgba(255, 255, 255, 1) !important;
   margin: 7.5px !important;
-  width: 75px; /* set somewhere else */
-  height: 75px;  
+  width: 75px !important;
+  height: 75px !important;  
 }
 
 amp-story-page[active] .i-amphtml-story-bling-link-pulse {
@@ -34,8 +34,8 @@ amp-story-page[active] .i-amphtml-story-bling-link-pulse {
   border-radius: 50% !important;
   background: rgba(255, 255, 255, 0.4) !important;
   margin: 7.5px !important;
-  width: 75px;
-  height: 75px;
+  width: 75px !important;
+  height: 75px !important;
   animation-name: pulse !important;
   animation-duration: 1.5s !important;
   animation-timing-function: cubic-bezier(0.4, 0.0, 0.2, 1) !important;
@@ -74,6 +74,6 @@ amp-story-bling-link:hover .i-amphtml-story-bling-link-pulse {
   display: flex !important;
 }
 
-.i-amphtml-story-shopping-cart {
+.i-amphtml-story-bling-link-shopping-cart {
   background-image: url('data:image/svg+xml;charset=utf-8,<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M7 18c-1.1 0-1.99.9-1.99 2S5.9 22 7 22s2-.9 2-2-.9-2-2-2zM1 2v2h2l3.6 7.59-1.35 2.45c-.16.28-.25.61-.25.96 0 1.1.9 2 2 2h12v-2H7.42c-.14 0-.25-.11-.25-.25l.03-.12.9-1.63h7.45c.75 0 1.41-.41 1.75-1.03l3.58-6.49c.08-.14.12-.31.12-.48 0-.55-.45-1-1-1H5.21l-.94-2H1zm16 16c-1.1 0-1.99.9-1.99 2s.89 2 1.99 2 2-.9 2-2-.9-2-2-2z"/><path d="M0 0h24v24H0z" fill="none"/></svg>') !important;
 }
