Remove shadow DOM

--- a/extensions/amp-story/1.0/amp-story-vertical.css
+++ b/extensions/amp-story/1.0/amp-story-vertical.css
@@ -66,3 +66,12 @@ amp-story[i-amphtml-vertical].i-amphtml-element amp-story-page.i-amphtml-element
   display: block !important;
   height: 178vw !important;
 }
+
+[scroll] .i-amphtml-story-page-description {
+  background: white !important;
+  color: black !important;
+  display: block !important;
+  padding: 32px !important;
+  width: 100% !important;
+  z-index: 9999999 !important;
+}
