--- a/extensions/amp-story/1.0/amp-story-vertical.css
+++ b/extensions/amp-story/1.0/amp-story-vertical.css
@@ -14,13 +14,12 @@
  * limitations under the License.
  */
 
-amp-story[standalone][scroll] {
-  overflow-y: auto !important;
+amp-story[standalone][vertical] {
   height: auto !important;
   contain: initial !important;
 }
 
-[scroll] amp-story-page {
+[vertical] amp-story-page {
   position: relative !important;
   /* iPhone 6/7/8 ratio. */
   height: 178vw !important;
@@ -29,18 +28,20 @@ amp-story[standalone][scroll] {
 }
 
 /* Increase CSS specifity. */
-amp-story[scroll].i-amphtml-element amp-story-page.i-amphtml-element {
+amp-story[vertical].i-amphtml-element amp-story-page.i-amphtml-element {
   transform: none !important;
 }
 
-[scroll] .i-amphtml-story-page-attachment-container[hidden] .i-amphtml-story-page-attachment-content {
+[vertical] .i-amphtml-story-page-attachment-container[hidden] .i-amphtml-story-page-attachment-content {
   opacity: 1 !important;
 }
 
-[scroll] .i-amphtml-story-page-attachment-container[hidden] .i-amphtml-story-page-attachment-content > * {
+[vertical] .i-amphtml-story-page-attachment-container[hidden] .i-amphtml-story-page-attachment-content > * {
   display: block !important;
 }
 
-[scroll] amp-story-page[i-amphtml-has-attachment] {
-  margin-bottom: 178vw !important;
+[vertical] amp-story-page-attachment {
+  position: relative !important;
+  height: 178vw !important;
+  transform: none !important;
 }
