--- a/extensions/amp-story/1.0/amp-story-vertical.css
+++ b/extensions/amp-story/1.0/amp-story-vertical.css
@@ -71,7 +71,7 @@ amp-story[i-amphtml-vertical].i-amphtml-element amp-story-page.i-amphtml-element
   background: white !important;
   color: black !important;
   display: block !important;
-  font-size: 0.8em !important;
+  font-size: 0.8rem !important;
   padding: 32px !important;
   width: 100% !important;
   z-index: 9999999 !important;
