Fix UI type attribute name

--- a/extensions/amp-story/1.0/amp-story-vertical.css
+++ b/extensions/amp-story/1.0/amp-story-vertical.css
@@ -67,7 +67,7 @@ amp-story[i-amphtml-vertical].i-amphtml-element amp-story-page.i-amphtml-element
   height: 178vw !important;
 }
 
-[scroll] .i-amphtml-story-page-description {
+[i-amphtml-vertical] .i-amphtml-story-page-description {
   background: white !important;
   color: black !important;
   display: block !important;
