--- a/css/ampshared.css
+++ b/css/ampshared.css
@@ -532,7 +532,7 @@ amp-accordion > section[expanded] > :last-child {
 /* New Loaders */
 
 /* Placeholder */
-.i-amphtml-new-loader-placeholder {
+.i-amphtml-default-placeholder {
   background-color: #f8f8f8;
 }
 
@@ -551,24 +551,56 @@ amp-accordion > section[expanded] > :last-child {
   height: 72px;
 }
 
-/* Spinner */
+.i-amphtml-new-loader-size-small {
+  margin-left: -24px;
+  margin-top: -24px;
+  width: 48px;
+  height: 48px;
+}
+
+/* Logo */
+.i-amphtml-new-loader-logo {
+  transform-origin: 60px 60px;
+  opacity: 0;
+  animation: i-amphtml-new-loader-scale-and-fade-in 0.8s ease-in 0.6s forwards,
+    i-amphtml-new-loader-fade-out 0.8s ease-out 1.8s forwards;
+}
+
+/* Spinner and its segments*/
 .i-amphtml-new-loader-spinner {
   transform-origin: 60px 60px;
-  animation-fill-mode: forwards;
+  opacity: 0;
   fill: transparent;
   stroke: #aaa;
   stroke-width: 1.5px;
-  stroke-dasharray: 34.5575191895 103.6725575685;
-  stroke-dashoffset: 51.8362787842;
-  animation: i-amphtml-new-loader-fade-in 0.8s ease-in 1.8s;
-  animation-fill-mode: forwards;
+  animation: i-amphtml-new-loader-fade-in 0.8s ease-in 1.8s forwards;
+}
+
+.i-amphtml-new-loader-size-default .i-amphtml-new-loader-spinner {
+  stroke-dasharray: 36 118;
+  stroke-dashoffset: 52;
+}
+.i-amphtml-new-loader-size-small .i-amphtml-new-loader-spinner {
+  stroke-dasharray: 18 59;
+  stroke-dashoffset: 26;
+  /*
+   * Small loader does not have a logo but its spinner appears at the same
+   * time as the logo for the default spinner does.
+   */
+  animation-delay: 0.8s;
 }
 
 .i-amphtml-new-loader-spinner-segment {
   transform-origin: 60px 60px;
-  animation: none 0.6s cubic-bezier(0.5, 0, 0.8, 1) 2.8s,
-    none 1.2s linear 3.4s infinite;
-  animation-fill-mode: forwards;
+  animation: none 0.6s cubic-bezier(0.5, 0, 0.8, 1) 2.8s forwards,
+    none 1.2s linear 3.4s infinite forwards;
+}
+
+.i-amphtml-new-loader-size-default .i-amphtml-new-loader-spinner-segment {
+  r: 22;
+}
+.i-amphtml-new-loader-size-small .i-amphtml-new-loader-spinner-segment {
+  r: 11;
 }
 
 .i-amphtml-new-loader-spinner-segment:nth-child(1) {
@@ -587,6 +619,15 @@ amp-accordion > section[expanded] > :last-child {
   animation-name: i-amphtml-new-loader-first-spin-4, none;
 }
 
+/* Animations only run when active */
+.i-amphtml-new-loader * {
+  animation-play-state: paused;
+}
+.i-amphtml-new-loader.amp-active * {
+  animation-play-state: running;
+}
+
+/* Animation keyframes */
 @keyframes i-amphtml-new-loader-spin-1 {
   0% {
     transform: rotate(0deg);
@@ -656,6 +697,26 @@ amp-accordion > section[expanded] > :last-child {
 @keyframes i-amphtml-new-loader-fade-in {
   0% {
     opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+@keyframes i-amphtml-new-loader-fade-out {
+  0% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+@keyframes i-amphtml-new-loader-scale-and-fade-in {
+  0% {
+    opacity: 0;
+    transform: scale(0);
+  }
+  50% {
+    transform: scale(1);
   }
   100% {
     opacity: 1;
